--- a/app/prueba.html
+++ b/app/prueba.html
@@ -14,13 +14,16 @@
             margin: 15px auto;
             padding: 15px;
             border: 3px solid red;
-            border-radius: 15px;
+            border-radius: 20px 5px 15px 40px;
             box-shadow: gray 5px 5px 10px;
+            background: -moz-linear-gradient(left, blue, #3FF);
+            background: -moz-radial-gradient(center, ellipse, green, yellow);
         }
         
         #titulo {
             font: bold 36px Verdana, Geneva, sans-serif;
             text-shadow: rgb(22, 235, 22) 3px 3px 5px;
+            color: rgba(0, 0, 0 0.1);
         }
     </style>
 
@@ -30,7 +33,7 @@
 <body>
 
     <header id="principal">
-        <span id="titulo">Estilos css3</span>
+        <span id="titulo">Lambe Bicho</span>
 
     </header>
 </body>
