--- a/app/html/service.html
+++ b/app/html/service.html
@@ -11,13 +11,13 @@
 
     <title>SeoGram - SEO Agency Template</title>
 
-    <link rel="stylesheet" href="../assets/css/maicons.css">
+    <link rel="stylesheet" href="./assets/css/maicons.css">
 
-    <link rel="stylesheet" href="../assets/css/bootstrap.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.css">
 
-    <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
+    <link rel="stylesheet" href="./assets/vendor/animate/animate.css">
 
-    <link rel="stylesheet" href="../assets/css/theme.css">
+    <link rel="stylesheet" href="./assets/css/theme.css">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
                 <div class="col-lg-4">
                     <div class="card-service">
                         <div class="header">
-                            <img src="../assets/img/services/service-1.svg" alt="">
+                            <img src="./assets/img/services/service-1.svg" alt="">
                         </div>
                         <div class="body">
                             <h5 class="text-secondary">SEO Consultancy</h5>
@@ -95,7 +95,7 @@
                 <div class="col-lg-4">
                     <div class="card-service">
                         <div class="header">
-                            <img src="../assets/img/services/service-2.svg" alt="">
+                            <img src="./assets/img/services/service-2.svg" alt="">
                         </div>
                         <div class="body">
                             <h5 class="text-secondary">Content Marketing</h5>
@@ -107,7 +107,7 @@
                 <div class="col-lg-4">
                     <div class="card-service">
                         <div class="header">
-                            <img src="../assets/img/services/service-3.svg" alt="">
+                            <img src="./assets/img/services/service-3.svg" alt="">
                         </div>
                         <div class="body">
                             <h5 class="text-secondary">Keyword Research</h5>
@@ -210,7 +210,7 @@
     </div>
     <!-- .page-section -->
 
-    <footer class="page-footer bg-image" style="background-image: url(../assets/img/world_pattern.svg);">
+    <footer class="page-footer bg-image" style="background-image: url(./assets/img/world_pattern.svg);">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-lg-3 py-3">
@@ -255,15 +255,15 @@
         </div>
     </footer>
 
-    <script src="../assets/js/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/jquery-3.5.1.min.js"></script>
 
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
 
-    <script src="../assets/js/google-maps.js"></script>
+    <script src="./assets/js/google-maps.js"></script>
 
-    <script src="../assets/vendor/wow/wow.min.js"></script>
+    <script src="./assets/vendor/wow/wow.min.js"></script>
 
-    <script src="../assets/js/theme.js"></script>
+    <script src="./assets/js/theme.js"></script>
 
 </body>
 
