--- a/app/html/contact.html
+++ b/app/html/contact.html
@@ -11,13 +11,13 @@
 
     <title>SeoGram - SEO Agency Template</title>
 
-    <link rel="stylesheet" href="../assets/css/maicons.css">
+    <link rel="stylesheet" href="./assets/css/maicons.css">
 
-    <link rel="stylesheet" href="../assets/css/bootstrap.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.css">
 
-    <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
+    <link rel="stylesheet" href="./assets/vendor/animate/animate.css">
 
-    <link rel="stylesheet" href="../assets/css/theme.css">
+    <link rel="stylesheet" href="./assets/css/theme.css">
 </head>
 
 <body>
@@ -154,7 +154,7 @@
         </div>
     </div>
 
-    <footer class="page-footer bg-image" style="background-image: url(../assets/img/world_pattern.svg);">
+    <footer class="page-footer bg-image" style="background-image: url(./assets/img/world_pattern.svg);">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-lg-3 py-3">
@@ -199,15 +199,15 @@
         </div>
     </footer>
 
-    <script src="../assets/js/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/jquery-3.5.1.min.js"></script>
 
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
 
-    <script src="../assets/js/google-maps.js"></script>
+    <script src="./assets/js/google-maps.js"></script>
 
-    <script src="../assets/vendor/wow/wow.min.js"></script>
+    <script src="./assets/vendor/wow/wow.min.js"></script>
 
-    <script src="../assets/js/theme.js"></script>
+    <script src="./assets/js/theme.js"></script>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
 
