--- a/app/html/blog-details.html
+++ b/app/html/blog-details.html
@@ -34,25 +34,25 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-                <div class="navbar-collapse collapsed" id="navbarContent">
+                <div class="navbar-collapse collapse" id="navbarContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.php">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="service.html">Services</a>
-                        </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="blog.html">Blog</a>
+                            <a class="nav-link" href="index.php">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="about.html">Acerca de</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="#">Free Analytics</a>
+                            <a class="nav-link" href="job-form.html">Publicar empleo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="blog.html">Buscar empleo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary ml-lg-2" href="login.html">Registrarse</a>
                         </li>
                     </ul>
                 </div>
