--- a/app/html/job-form.html
+++ b/app/html/job-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 
     <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-    <title>SeoGram - SEO Agency Template</title>
+    <title>Vinculin - Publicar empleo</title>
 
     <link rel="stylesheet" href="./assets/css/maicons.css">
 
@@ -34,25 +34,25 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-                <div class="navbar-collapse collapsed" id="navbarContent">
+                <div class="navbar-collapse collapse" id="navbarContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.php">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="service.html">Services</a>
+                            <a class="nav-link" href="index.php">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blog.html">Blog</a>
+                            <a class="nav-link" href="about.html">Acerca de</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="job-form.html">Publicar empleo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="#">Free Analytics</a>
+                            <a class="nav-link" href="blog.html">Buscar empleo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary ml-lg-2" href="login.html">Registrarse</a>
                         </li>
                     </ul>
                 </div>
@@ -66,11 +66,11 @@
                     <div class="col-md-6">
                         <nav aria-label="Breadcrumb">
                             <ul class="breadcrumb justify-content-center py-0 bg-transparent">
-                                <li class="breadcrumb-item"><a href="index.php">Home</a></li>
-                                <li class="breadcrumb-item active">Services</li>
+                                <li class="breadcrumb-item"><a href="index.php">Inicio</a></li>
+                                <li class="breadcrumb-item active">Publicar empleo</li>
                             </ul>
                         </nav>
-                        <h1 class="text-center">Our Services</h1>
+                        <h1 class="text-center">Nuevo anuncio</h1>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                         <div class="body">
                             <h5 class="text-secondary">SEO Consultancy</h5>
                             <p>We help you define your SEO objective & develop a realistic strategy with you</p>
-                            <a href="service.html" class="btn btn-primary">Read More</a>
+                            <a href="job-form.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                         <div class="body">
                             <h5 class="text-secondary">Content Marketing</h5>
                             <p>We help you define your SEO objective & develop a realistic strategy with you</p>
-                            <a href="service.html" class="btn btn-primary">Read More</a>
+                            <a href="job-form.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                         <div class="body">
                             <h5 class="text-secondary">Keyword Research</h5>
                             <p>We help you define your SEO objective & develop a realistic strategy with you</p>
-                            <a href="service.html" class="btn btn-primary">Read More</a>
+                            <a href="job-form.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
