--- a/app/html/jobs.html
+++ b/app/html/jobs.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="service.html">Services</a>
+                            <a class="nav-link" href="job-form.html">Services</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="blog.html">Blog</a>
