--- a/app/html/jobs.html
+++ b/app/html/jobs.html
@@ -46,7 +46,7 @@
                             <a class="nav-link" href="job-form.html">Services</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="blog.html">Blog</a>
+                            <a class="nav-link" href="blog-details.html">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
