--- a/app/html/job-form.html
+++ b/app/html/job-form.html
@@ -36,17 +36,17 @@
 
                 <div class="navbar-collapse collapse" id="navbarContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.php">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">Acerca de</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="job-form.html">Publicar empleo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blog-details.html">Buscar empleo</a>
+                            <a class="nav-link" href="jobs.html">Buscar empleo</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
@@ -59,156 +59,55 @@
 
             </div>
         </nav>
-
-        <div class="container">
-            <div class="page-banner">
-                <div class="row justify-content-center align-items-center h-100">
-                    <div class="col-md-6">
-                        <nav aria-label="Breadcrumb">
-                            <ul class="breadcrumb justify-content-center py-0 bg-transparent">
-                                <li class="breadcrumb-item"><a href="index.php">Inicio</a></li>
-                                <li class="breadcrumb-item active">Publicar empleo</li>
-                            </ul>
-                        </nav>
-                        <h1 class="text-center">Nuevo anuncio</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
     </header>
 
-    <div class="page-section">
-        <div class="container">
+        <div class="container-fluid mt-4">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="card-service">
-                        <div class="header">
-                            <img src="./assets/img/services/service-1.svg" alt="">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <form action="#" class="contact-form py-5 px-lg-5">
+                        <h2 class="mb-4 font-weight-medium text-secondary">Publica tu empleo</h2>
+                        <div class="row form-group">
+                            <div class="col-md-6 mb-3 mb-md-0">
+                                <label class="text-black" for="fname">Titulo</label>
+                                <input type="text" id="fname" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="text-black" for="lname">Empresa</label>
+                                <input type="text" id="lname" class="form-control">
+                            </div>
                         </div>
-                        <div class="body">
-                            <h5 class="text-secondary">SEO Consultancy</h5>
-                            <p>We help you define your SEO objective & develop a realistic strategy with you</p>
-                            <a href="job-form.html" class="btn btn-primary">Read More</a>
+
+                        <div class="row form-group">
+                            <div class="col-md-12">
+                                <label class="text-black" for="email">Localidad</label>
+                                <input type="text" id="text" class="form-control">
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card-service">
-                        <div class="header">
-                            <img src="./assets/img/services/service-2.svg" alt="">
+
+                        <div class="row form-group">
+
+                            <div class="col-md-12">
+                                <label class="text-black" for="subject">Telefono</label>
+                                <input type="text" id="text" class="form-control">
+                            </div>
                         </div>
-                        <div class="body">
-                            <h5 class="text-secondary">Content Marketing</h5>
-                            <p>We help you define your SEO objective & develop a realistic strategy with you</p>
-                            <a href="job-form.html" class="btn btn-primary">Read More</a>
+
+                        <div class="row form-group">
+                            <div class="col-md-12">
+                                <label class="text-black" for="message">Descripción</label>
+                                <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Escribe aquí la descripción del empleo..."></textarea>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card-service">
-                        <div class="header">
-                            <img src="./assets/img/services/service-3.svg" alt="">
+
+                        <div class="row form-group mt-4">
+                            <div class="col-md-12">
+                                <input type="submit" value="Publicar" class="btn btn-primary">
+                            </div>
                         </div>
-                        <div class="body">
-                            <h5 class="text-secondary">Keyword Research</h5>
-                            <p>We help you define your SEO objective & develop a realistic strategy with you</p>
-                            <a href="job-form.html" class="btn btn-primary">Read More</a>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <!-- .container -->
-    </div>
-    <!-- .page-section -->
-
-    <div class="page-section bg-light">
-        <div class="container">
-            <div class="text-center">
-                <div class="subhead">Our services</div>
-                <h2 class="title-section">How SEO Team Can Help</h2>
-                <div class="divider mx-auto"></div>
-
-                <div class="row">
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 py-3">
-                        <div class="features">
-                            <div class="header mb-3">
-                                <span class="mai-business"></span>
-                            </div>
-                            <h5>OnSite SEO</h5>
-                            <p>We analyse your website's structure, internal architecture & other key</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- .container -->
-    </div>
-    <!-- .page-section -->
 
     <footer class="page-footer bg-image" style="background-image: url(./assets/img/world_pattern.svg);">
         <div class="container">
