--- a/app/html/job-view.html
+++ b/app/html/job-view.html
@@ -36,7 +36,7 @@
 
                 <div class="navbar-collapse collapse" id="navbarContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.php">Inicio</a>
                         </li>
                         <li class="nav-item">
@@ -45,8 +45,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="job-form.html">Publicar empleo</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="blog-details.html">Buscar empleo</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="jobs.html">Buscar empleo</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
