--- a/app/html/jobs.html
+++ b/app/html/jobs.html
@@ -9,7 +9,7 @@
 
     <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-    <title>SeoGram - SEO Agency Template</title>
+    <title>Vinculin - Empleos</title>
 
     <link rel="stylesheet" href="./assets/css/maicons.css">
 
@@ -28,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white sticky" data-offset="300">
             <div class="container">
-                <a href="#" class="navbar-brand">Seo<span class="text-primary">Gram.</span></a>
+                <a href="#" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
