--- a/app/html/about.html
+++ b/app/html/about.html
@@ -59,34 +59,23 @@
 
             </div>
         </nav>
-
-        <div class="container">
-            <div class="page-banner">
-                <div class="row justify-content-center align-items-center h-100">
-                    <div class="col-md-6">
-                        <nav aria-label="Breadcrumb">
-                            <ul class="breadcrumb justify-content-center py-0 bg-transparent">
-                                <li class="breadcrumb-item"><a href="index.php">Home</a></li>
-                                <li class="breadcrumb-item active">About</li>
-                            </ul>
-                        </nav>
-                        <h1 class="text-center">About Us</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
     </header>
 
     <div class="page-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 py-3">
-                    <h2 class="title-section">The number #1 SEO Service Company</h2>
+                    <h2 class="title-section">Visión</h2>
                     <div class="divider"></div>
+                    <p>Crear oportunidades económicas para cada profesional del mercado laboral internacional.</p>
 
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                    <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nisi saepe eum ipsa. Tempore dolore itaque est blanditiis libero fugiat, ea nostrum nam at tempora quis, facilis officiis nemo mollitia.</p>
+                    <h2 class="title-section">Misión</h2>
+                    <div class="divider"></div>
+                    <p>La misión de Vinculin es sencilla: conectar a profesionales de todo el mundo para ayudarles a ser más productivos y a alcanzar todas sus metas laborales.</p>
+
+                    <h2 class="title-section">¿Quiénes somos?</h2>
+                    <div class="divider"></div>
+                    <p>Somos una simulación de la página LinkedIn, hecho para un trabajo de seguridad para la Escuela de Ingenieros de Bilbao.</p>
                 </div>
                 <div class="col-lg-6 py-3">
                     <div class="img-fluid py-3 text-center">
@@ -97,88 +86,7 @@
         </div>
     </div>
 
-    <div class="page-section">
-        <div class="container">
-            <div class="text-center">
-                <div class="subhead">Pricing Plan</div>
-                <h2 class="title-section">Choose plan the right for you</h2>
-                <div class="divider mx-auto"></div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-lg-4 py-3">
-                    <div class="card-pricing">
-                        <div class="header">
-                            <div class="pricing-type">Basic</div>
-                            <div class="price">
-                                <span class="dollar">$</span>
-                                <h1>39<span class="suffix">.99</span></h1>
-                            </div>
-                            <h5>Per Month</h5>
-                        </div>
-                        <div class="body">
-                            <p>25 Analytics <span class="suffix">Campaign</span></p>
-                            <p>1,300 Change <span class="suffix">Keywords</span></p>
-                            <p>Social Media <span class="suffix">Reviews</span></p>
-                            <p>1 Free <span class="suffix">Optimization</span></p>
-                            <p>24/7 <span class="suffix">Support</span></p>
-                        </div>
-                        <div class="footer">
-                            <a href="#" class="btn btn-pricing btn-block">Subscribe</a>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-lg-4 py-3">
-                    <div class="card-pricing marked">
-                        <div class="header">
-                            <div class="pricing-type">Standar</div>
-                            <div class="price">
-                                <span class="dollar">$</span>
-                                <h1>59<span class="suffix">.99</span></h1>
-                            </div>
-                            <h5>Per Month</h5>
-                        </div>
-                        <div class="body">
-                            <p>25 Analytics <span class="suffix">Campaign</span></p>
-                            <p>1,300 Change <span class="suffix">Keywords</span></p>
-                            <p>Social Media <span class="suffix">Reviews</span></p>
-                            <p>1 Free <span class="suffix">Optimization</span></p>
-                            <p>24/7 <span class="suffix">Support</span></p>
-                        </div>
-                        <div class="footer">
-                            <a href="#" class="btn btn-pricing btn-block">Subscribe</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 py-3">
-                    <div class="card-pricing">
-                        <div class="header">
-                            <div class="pricing-type">Professional</div>
-                            <div class="price">
-                                <span class="dollar">$</span>
-                                <h1>99<span class="suffix">.99</span></h1>
-                            </div>
-                            <h5>Per Month</h5>
-                        </div>
-                        <div class="body">
-                            <p>25 Analytics <span class="suffix">Campaign</span></p>
-                            <p>1,300 Change <span class="suffix">Keywords</span></p>
-                            <p>Social Media <span class="suffix">Reviews</span></p>
-                            <p>1 Free <span class="suffix">Optimization</span></p>
-                            <p>24/7 <span class="suffix">Support</span></p>
-                        </div>
-                        <div class="footer">
-                            <a href="#" class="btn btn-pricing btn-block">Subscribe</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- .container -->
-    </div>
-    <!-- .page-section -->
 
     <footer class="page-footer bg-image" style="background-image: url(./assets/img/world_pattern.svg);">
         <div class="container">
