trabajando en login y signup

--- a/app/html/about.html
+++ b/app/html/about.html
@@ -28,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white sticky" data-offset="300">
             <div class="container">
-                <a href="#" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
+                <a href="index.php" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="login.html">Registrarse</a>
+                            <a class="btn btn-primary ml-lg-2" href="signup.html">Registrarse</a>
                         </li>
                     </ul>
                 </div>
