--- a/app/html/job-form.html
+++ b/app/html/job-form.html
@@ -28,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white sticky" data-offset="300">
             <div class="container">
-                <a href="#" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
+                <a href="index.php" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="login.html">Registrarse</a>
+                            <a class="btn btn-primary ml-lg-2" href="signup.html">Registrarse</a>
                         </li>
                     </ul>
                 </div>
@@ -61,53 +61,53 @@
         </nav>
     </header>
 
-        <div class="container-fluid mt-4">
-            <div class="row">
-                <div class="col-lg-6 mb-5 mb-lg-0">
-                    <form action="#" class="contact-form py-5 px-lg-5">
-                        <h2 class="mb-4 font-weight-medium text-secondary">Publica tu empleo</h2>
-                        <div class="row form-group">
-                            <div class="col-md-6 mb-3 mb-md-0">
-                                <label class="text-black" for="fname">Titulo</label>
-                                <input type="text" id="fname" class="form-control">
-                            </div>
-                            <div class="col-md-6">
-                                <label class="text-black" for="lname">Empresa</label>
-                                <input type="text" id="lname" class="form-control">
-                            </div>
+    <div class="container-fluid mt-4">
+        <div class="row">
+            <div class="col-lg-6 mb-5 mb-lg-0">
+                <form action="#" class="contact-form py-5 px-lg-5">
+                    <h2 class="mb-4 font-weight-medium text-secondary">Publica tu empleo</h2>
+                    <div class="row form-group">
+                        <div class="col-md-6 mb-3 mb-md-0">
+                            <label class="text-black" for="fname">Titulo</label>
+                            <input type="text" id="fname" class="form-control">
                         </div>
-
-                        <div class="row form-group">
-                            <div class="col-md-12">
-                                <label class="text-black" for="email">Localidad</label>
-                                <input type="text" id="text" class="form-control">
-                            </div>
+                        <div class="col-md-6">
+                            <label class="text-black" for="lname">Empresa</label>
+                            <input type="text" id="lname" class="form-control">
                         </div>
+                    </div>
 
-                        <div class="row form-group">
-
-                            <div class="col-md-12">
-                                <label class="text-black" for="subject">Telefono</label>
-                                <input type="text" id="text" class="form-control">
-                            </div>
+                    <div class="row form-group">
+                        <div class="col-md-12">
+                            <label class="text-black" for="email">Localidad</label>
+                            <input type="text" id="text" class="form-control">
                         </div>
+                    </div>
 
-                        <div class="row form-group">
-                            <div class="col-md-12">
-                                <label class="text-black" for="message">Descripción</label>
-                                <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Escribe aquí la descripción del empleo..."></textarea>
-                            </div>
-                        </div>
+                    <div class="row form-group">
 
-                        <div class="row form-group mt-4">
-                            <div class="col-md-12">
-                                <input type="submit" value="Publicar" class="btn btn-primary">
-                            </div>
+                        <div class="col-md-12">
+                            <label class="text-black" for="subject">Telefono</label>
+                            <input type="text" id="text" class="form-control">
                         </div>
-                    </form>
-                </div>
+                    </div>
+
+                    <div class="row form-group">
+                        <div class="col-md-12">
+                            <label class="text-black" for="message">Descripción</label>
+                            <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Escribe aquí la descripción del empleo..."></textarea>
+                        </div>
+                    </div>
+
+                    <div class="row form-group mt-4">
+                        <div class="col-md-12">
+                            <input type="submit" value="Publicar" class="btn btn-primary">
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
+    </div>
 
     <footer class="page-footer bg-image" style="background-image: url(./assets/img/world_pattern.svg);">
         <div class="container">
