--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -9,7 +9,7 @@
 
     <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-    <title>Vinculin - Iniciar Sesión</title>
+    <title>Vinculin - Registrarse</title>
 
     <link rel="stylesheet" href="./assets/css/maicons.css">
 
@@ -52,7 +52,7 @@
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="signup.html">Registrarse</a>
+                            <a class="btn btn-primary ml-lg-2" href="login.html">Registrarse</a>
                         </li>
                     </ul>
                 </div>
@@ -80,8 +80,7 @@
                     <div class="row form-group">
 
                         <div class="col-md-12">
-                            <input type="password" id="password" class="form-control" placeholder="Contraseña">
-                            <span id="password-visibility-toggle" role="button" tabindex="0"></span>
+                            <input type="text" id="subject" class="form-control" placeholder="Contraseña">
                         </div>
                     </div>
 
