password_forgotten creado

--- a/app/html/password_forgotten.html
+++ b/app/html/password_forgotten.html
@@ -9,7 +9,7 @@
 
     <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-    <title>Vinculin - Registrarse</title>
+    <title>Vinculin - Restablecer contraseña</title>
 
     <link rel="stylesheet" href="./assets/css/maicons.css">
 
@@ -52,7 +52,7 @@
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="login.html">Registrarse</a>
+                            <a class="btn btn-primary ml-lg-2" href="signup.html">Registrarse</a>
                         </li>
                     </ul>
                 </div>
@@ -73,6 +73,7 @@
 
                     <div class="row form-group">
                         <div class="col-md-12">
+                            <h1 class="header">¿Has olvidado tu contraseña?</h1>
                             <input type="email" id="email" class="form-control" placeholder="Email">
                         </div>
                     </div>
@@ -80,10 +81,12 @@
                     <div class="row form-group">
 
                         <div class="col-md-12">
-                            <input type="text" id="subject" class="form-control" placeholder="Contraseña">
+                            <input type="password" id="password" class="form-control" placeholder="Contraseña">
+                            <span id="password-visibility-toggle" role="button" tabindex="0"></span>
+                            <a href=""></a>
                         </div>
                     </div>
-                    <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
+
                     <div class="row form-group mt-4">
                         <div class="col-md-12">
                             <input type="submit" value="Iniciar sesión" class="btn btn-primary">
