No consigo centrar las cajas de login.hmtl

--- a/app/html/password_forgotten.html
+++ b/app/html/password_forgotten.html
@@ -68,28 +68,23 @@
         <div class="row">
             <div class="col-lg-6 mb-5 mb-lg-0">
                 <form action="#" class="contact-form py-5 px-lg-5">
-                    <h2 class="mb-4 font-weight-medium text-secondary">Inicia sesión</h2>
+                    <h1 class="mb-4 font-weight-medium text-primary">¿Has olvidado tu contraseña?</h1>
 
 
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <h1 class="header">¿Has olvidado tu contraseña?</h1>
+                            <h2 class="mb-4 font-weight-medium text-secondary">Recupera tu contraseña en un periquete</h2>
                             <input type="email" id="email" class="form-control" placeholder="Email">
                         </div>
                     </div>
-
-                    <div class="row form-group">
-
-                        <div class="col-md-12">
-                            <input type="password" id="password" class="form-control" placeholder="Contraseña">
-                            <span id="password-visibility-toggle" role="button" tabindex="0"></span>
-                            <a href=""></a>
-                        </div>
-                    </div>
-
                     <div class="row form-group mt-4">
                         <div class="col-md-12">
-                            <input type="submit" value="Iniciar sesión" class="btn btn-primary">
+                            <input type="submit" value="Restablecer la contraseña" class="btn btn-primary">
+                        </div>
+                    </div>
+                    <div class="row form-group mt-4">
+                        <div class="col-md-12">
+                            <a class="btn btn-primary" href="login.html">Volver</a>
                         </div>
                     </div>
                 </form>
@@ -116,7 +111,7 @@
                     <ul class="footer-menu">
                         <li><a href="./about.html">Acerca de</a></li>
                         <li><a href="./jobs.html">Empleos</a></li>
-                        <li><a href="./login.html">Regístrate</a></li>
+                        <li><a href="./signup.html">Regístrate</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 py-3">
