--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -68,25 +68,56 @@
         <div class="row">
             <div class="col-lg-6 mb-5 mb-lg-0">
                 <form action="#" class="contact-form py-5 px-lg-5">
-                    <h2 class="mb-4 font-weight-medium text-secondary">Inicia sesión</h2>
-
+                    <h2 class="mb-4 font-weight-medium text-secondary">Regístrate</h2>
 
                     <div class="row form-group">
-                        <div class="col-md-12">
-                            <input type="email" id="email" class="form-control" placeholder="Email">
+                        <div class="col-md-6 mb-3 mb-md-0">
+                            <label class="text-black" for="fname">Email</label>
+                            <input type="text" id="fname" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="text-black" for="lname">Nombre y apellidos</label>
+                            <input type="text" id="lname" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="text-black" for="lname">DNI</label>
+                            <input type="text" id="lname" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="text-black" for="lname">Fecha de nacimiento</label>
+                            <input type="text" id="lname" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="row form-group">
+                        <div class="col-md-6">
+                            <label class="text-black" for="email">Contraseña</label>
+                            <input type="text" id="text" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="text-black" for="email">Repite la contraseña</label>
+                            <input type="text" id="text" class="form-control">
                         </div>
                     </div>
 
                     <div class="row form-group">
 
-                        <div class="col-md-12">
-                            <input type="text" id="subject" class="form-control" placeholder="Contraseña">
+                        <div class="col-md-6">
+                            <label class="text-black" for="subject">Telefono</label>
+                            <input type="text" id="text" class="form-control">
                         </div>
                     </div>
-                    <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
+
+                    <div class="row form-group">
+                        <div class="col-md-6">
+                            <label class="text-black" for="message">Localidad</label>
+                            <input type="text" id="text" class="form-control">
+                        </div>
+                    </div>
+
                     <div class="row form-group mt-4">
                         <div class="col-md-12">
-                            <input type="submit" value="Iniciar sesión" class="btn btn-primary">
+                            <input type="submit" value="Unirse" class="btn btn-primary">
                         </div>
                     </div>
                 </form>
@@ -113,7 +144,6 @@
                     <ul class="footer-menu">
                         <li><a href="./about.html">Acerca de</a></li>
                         <li><a href="./jobs.html">Empleos</a></li>
-                        <li><a href="./login.html">Regístrate</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 py-3">
