--- a/app/html/login.html
+++ b/app/html/login.html
@@ -31,63 +31,44 @@
                 <a href="index.php" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-                <div class="navbar-collapse collapse" id="navbarContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.php">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">Acerca de</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="job-form.html">Publicar empleo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="jobs.html">Buscar empleo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="signup.html">Registrarse</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
+          <span class="navbar-toggler-icon"></span>        
         </nav>
 
 
     </header>
 
 
-    <div class="container-fluid mt-4">
-        <div class="row">
-            <div class="col-lg-6 mb-5 mb-lg-0">
+    <div class="text-center">
+        <div class="text-center">
+            <div class="text-center">
                 <form action="#" class="contact-form py-5 px-lg-5">
                     <h2 class="mb-4 font-weight-medium text-secondary">Inicia sesión</h2>
 
 
                     <div class="row form-group">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <input type="email" id="email" class="form-control" placeholder="Email">
                         </div>
                     </div>
 
                     <div class="row form-group">
 
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <input type="password" id="password" class="form-control" placeholder="Contraseña">
                             <span id="password-visibility-toggle" role="button" tabindex="0"></span>
+                            <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
                         </div>
                     </div>
 
                     <div class="row form-group mt-4">
                         <div class="col-md-12">
                             <input type="submit" value="Iniciar sesión" class="btn btn-primary">
+                        </div>
+                    </div>
+                    <div class="row form-group mt-4">
+                        <div class="col-md-12">
+                            ¿Eres nuevo en Vinculin?
+                            <a class="nav-link" href="signup.html">Únete ahora.</a>
                         </div>
                     </div>
                 </form>
@@ -114,7 +95,7 @@
                     <ul class="footer-menu">
                         <li><a href="./about.html">Acerca de</a></li>
                         <li><a href="./jobs.html">Empleos</a></li>
-                        <li><a href="./login.html">Regístrate</a></li>
+                        <li><a href="./signup.html">Regístrate</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 py-3">
