Arreglado el formulario y quitado el header de registrar

--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -31,33 +31,7 @@
                 <a href="index.php" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-                <div class="navbar-collapse collapse" id="navbarContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.php">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">Acerca de</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="job-form.html">Publicar empleo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="jobs.html">Buscar empleo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="login.html">Registrarse</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
+          <span class="navbar-toggler-icon"></span>        
         </nav>
 
 
@@ -71,13 +45,13 @@
                     <h2 class="mb-4 font-weight-medium text-secondary">Regístrate</h2>
 
                     <div class="row form-group">
-                        <div class="col-md-6 mb-3 mb-md-0">
-                            <label class="text-black" for="fname">Email</label>
+                        <div class="col-md-12 mb-3 mb-md-0">
+                            <label class="text-black" for="fname">Nombre y apellidos</label>
                             <input type="text" id="fname" class="form-control">
                         </div>
-                        <div class="col-md-6">
-                            <label class="text-black" for="lname">Nombre y apellidos</label>
-                            <input type="text" id="lname" class="form-control">
+                        <div class="col-md-12">
+                            <label class="text-black" for="lname">Email</label>
+                            <input type="email" id="lname" class="form-control">
                         </div>
                         <div class="col-md-6">
                             <label class="text-black" for="lname">DNI</label>
@@ -85,32 +59,19 @@
                         </div>
                         <div class="col-md-6">
                             <label class="text-black" for="lname">Fecha de nacimiento</label>
-                            <input type="text" id="lname" class="form-control">
+                            <input type="date" id="lname" class="form-control">
                         </div>
-                    </div>
-
-                    <div class="row form-group">
                         <div class="col-md-6">
                             <label class="text-black" for="email">Contraseña</label>
-                            <input type="text" id="text" class="form-control">
+                            <input type="password" id="text" class="form-control">
                         </div>
                         <div class="col-md-6">
                             <label class="text-black" for="email">Repite la contraseña</label>
-                            <input type="text" id="text" class="form-control">
+                            <input type="password" id="text" class="form-control">
                         </div>
-                    </div>
-
-                    <div class="row form-group">
-
-                        <div class="col-md-6">
+                    
+                        <div class="col-md-12">
                             <label class="text-black" for="subject">Telefono</label>
-                            <input type="text" id="text" class="form-control">
-                        </div>
-                    </div>
-
-                    <div class="row form-group">
-                        <div class="col-md-6">
-                            <label class="text-black" for="message">Localidad</label>
                             <input type="text" id="text" class="form-control">
                         </div>
                     </div>
