Cambiado el signup a php

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -68,7 +68,7 @@
                     <div class="row form-group mt-4">
                         <div class="col-md-12">
                             ¿Eres nuevo en Vinculin?
-                            <a class="nav-link" href="signup.html">Únete ahora.</a>
+                            <a class="nav-link" href="signup.php">Únete ahora.</a>
                         </div>
                     </div>
                 </form>
@@ -95,7 +95,7 @@
                     <ul class="footer-menu">
                         <li><a href="./about.html">Acerca de</a></li>
                         <li><a href="./jobs.html">Empleos</a></li>
-                        <li><a href="./signup.html">Regístrate</a></li>
+                        <li><a href="./signup.php">Regístrate</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 py-3">
