--- a/app/html/password_forgotten.html
+++ b/app/html/password_forgotten.html
@@ -52,7 +52,7 @@
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="signup.html">Registrarse</a>
+                            <a class="btn btn-primary ml-lg-2" href="signup.php">Registrarse</a>
                         </li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
                     <ul class="footer-menu">
                         <li><a href="./about.html">Acerca de</a></li>
                         <li><a href="./jobs.html">Empleos</a></li>
-                        <li><a href="./signup.html">Regístrate</a></li>
+                        <li><a href="./signup.php">Regístrate</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 py-3">
