--- a/app/html/about.html
+++ b/app/html/about.html
@@ -52,7 +52,7 @@
                             <a class="btn btn-primary ml-lg-2" href="login.html">Identificarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary ml-lg-2" href="signup.html">Registrarse</a>
+                            <a class="btn btn-primary ml-lg-2" href="signup.php">Registrarse</a>
                         </li>
                     </ul>
                 </div>
