--- a/app/html/login.html
+++ b/app/html/login.html
@@ -41,20 +41,20 @@
     <div class="text-center">
         <div class="text-center">
             <div class="text-center">
-                <form action="#" class="contact-form py-5 px-lg-5">
+                <form action="login.php" method="post" class="contact-form py-5 px-lg-5">
                     <h2 class="mb-4 font-weight-medium text-secondary">Inicia sesión</h2>
 
 
                     <div class="row form-group">
                         <div class="col-md-6">
-                            <input type="email" id="email" class="form-control" placeholder="Email">
+                            <input type="email" id="email" name="email" class="form-control" placeholder="Email">
                         </div>
                     </div>
 
                     <div class="row form-group">
 
                         <div class="col-md-6">
-                            <input type="password" id="password" class="form-control" placeholder="Contraseña">
+                            <input type="password" id="password" name="contraseña" class="form-control" placeholder="Contraseña">
                             <span id="password-visibility-toggle" role="button" tabindex="0"></span>
                             <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
                         </div>
