login funcionando, logout hecho

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -47,15 +47,15 @@
 
                     <div class="row form-group">
                         <div class="col-md-6">
-                            <input type="email" id="email" name="email" class="form-control" placeholder="Email">
+                            <input type="email"  name="email" class="form-control" placeholder="Email" required="required">
                         </div>
                     </div>
 
                     <div class="row form-group">
 
                         <div class="col-md-6">
-                            <input type="password" id="password" name="contraseña" class="form-control" placeholder="Contraseña">
-                            <span id="password-visibility-toggle" role="button" tabindex="0"></span>
+                            <input type="password" name="contra" class="form-control" placeholder="Contraseña" required="required">
+                            
                             <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
                         </div>
                     </div>
