--- a/app/html/login.html
+++ b/app/html/login.html
@@ -45,15 +45,15 @@
                     <h2 class="mb-4 font-weight-medium text-secondary">Inicia sesión</h2>
 
 
-                    <div class="row form-group">
-                        <div class="col-md-6">
+                    <div class="row form-group mt-4">
+                        <div class="mx-auto" style="width: 500px;">
                             <input type="email"  name="email" class="form-control" placeholder="Email" required="required">
                         </div>
                     </div>
 
-                    <div class="row form-group">
+                    <div class="row form-group mt-4">
 
-                        <div class="col-md-6">
+                        <div class="mx-auto" style="width: 500px;">
                             <input type="password" name="contra" class="form-control" placeholder="Contraseña" required="required">
                             
                             <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
