un poquito de contraseña olvidada empezado pero lo dejamos para el final, pues no es obligatorio

--- a/app/html/password_forgotten.html
+++ b/app/html/password_forgotten.html
@@ -67,7 +67,7 @@
     <div class="container-fluid mt-4">
         <div class="row">
             <div class="col-lg-6 mb-5 mb-lg-0">
-                <form action="#" class="contact-form py-5 px-lg-5">
+                <form action="change_password.php" method="post" class="contact-form py-5 px-lg-5">
                     <h1 class="mb-4 font-weight-medium text-primary">¿Has olvidado tu contraseña?</h1>
 
 
