Perdida de autenticacion

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script>
+    window.onload = function(){killerSession();}
+    function killerSession(){
+        setTimeout("window.open('logout.php','_top');",60000);
+    } 
+</script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
